--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 <body>
   <div class="gradient-background">
-       <h1>Hi! I am Nayan</h1>
+<!--        <h1>Hi! I am Nayan</h1> -->
   </div>
  
 </body>
