--- a/index.html
+++ b/index.html
@@ -5,10 +5,8 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 
-<body>
-  <div class="gradient-background">
-<!--        <h1>Hi! I am Nayan</h1> -->
-  </div>
+<body class="gradient-background">
+ 
  
 </body>
 
