--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 
-<body class="gradient-background">
+<!-- <body class="gradient-background"> -->
+  <body class="gradient-background">
   <h1> Hello! <h1>
  
 </body>
