--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 
 <!-- <body class="gradient-background"> -->
-  <body class="gradient-background">
+  <body>
   <h1> Hello! <h1>
  
 </body>
