--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <title>Nayan Savaliya</title>
   <link rel="stylesheet" href="styles.css">
 </head>
-<body>
+<body class= "gradient-background">
   <h1>  Hello!  </h1>
 </body>
 
