--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
   <title>Nayan Savaliya</title>
   <link rel="stylesheet" href="styles.css">
 </head>
-<body class="gradient-background">
-  <h1>  Hello!  </h1>
+<body>
+  <div class="gradient-background">
+    <h1>  Hello!  </h1>
+   </div>
 </body>
 
 </html>
